:lipstick: :bug: Fix buttons wrap #952

--- a/kmfrontend/src/frontend/components/karas/KaraLine.scss
+++ b/kmfrontend/src/frontend/components/karas/KaraLine.scss
@@ -129,7 +129,7 @@ body:not(.touch) {
 		padding: 0.25em 0;
 		flex-direction: column;
 		display: flex;
-		flex-basis: 80%;
+		flex-basis: 50%;
 		> * {
 			flex: 0 0 auto !important;
 		}
